--- a/content/resources/18-085f08-th.md
+++ b/content/resources/18-085f08-th.md
@@ -9,7 +9,8 @@ file_type: image/jpeg
 image_metadata:
   caption: This image comes from "A Simple Mesh Generator in MATLAB" submitted to
     SIAM Review. The mesh was created using the truss model in Section 2.4 of the
-    text; color shows distance to the boundary. (Image courtesy of [Per-Olof Persson](http://persson.berkeley.edu/index.html).)
+    text; color shows distance to the boundary. (Image courtesy of {{% resource_link
+    "58e4aa15-140c-4e2f-8751-908611f77351" "Per-Olof Persson" %}}.)
   credit: ''
   image-alt: A Simple Mesh Generator in MATLAB.
 learning_resource_types: []
